# SystemUtils

./: CMakeLists.txt  README.md
include/SystemUtils/: CryptoRandom.hpp  DiagnosticsContext.hpp  DiagnosticsSender.hpp  DiagnosticsStreamReporter.hpp  DirectoryMonitor.hpp  DynamicLibrary.hpp  File.hpp  IFile.hpp  IFileSystemEntry.hpp  INetworkConnection.hpp  NetworkConnection.hpp  NetworkEndPoint.hpp  Service.hpp  StringFile.hpp  Subprocess.hpp  TargetInfo.hpp  Time.hpp
src/: DataQueue.cpp  DataQueue.hpp  DiagnosticsContext.cpp  DiagnosticsSender.cpp  DiagnosticsStreamReporter.cpp  File.cpp  FileImpl.hpp  NetworkConnection.cpp  NetworkConnectionImpl.hpp  NetworkEndPoint.cpp  NetworkEndPointImpl.hpp  StringFile.cpp  SubprocessInternal.hpp
src/Linux/: DynamicLibraryImpl.cpp
src/Posix/: CryptoRandomPosix.cpp  DynamicLibraryImpl.hpp  DynamicLibraryPosix.cpp
src/Win32/: CryptoRandomWin32.cpp  DirectoryMonitorWin32.cpp  DynamicLibraryWin32.cpp  FileWin32.cpp  NetworkConnectionWin32.cpp  NetworkConnectionWin32.hpp  NetworkEndPointWin32.cpp  NetworkEndPointWin32.hpp  SubprocessWin32.cpp  TargetInfoWin32.cpp  TimeWin32.cpp
test/: CMakeLists.txt
test/MockDynamicLibrary/: CMakeLists.txt
test/MockDynamicLibrary/src/: MockDynamicLibrary.cpp
test/MockSubprocess/: CMakeLists.txt
test/MockSubprocess/src/: main.cpp
test/src/: CryptoRandomTests.cpp  DiagnosticsContextTests.cpp  DiagnosticsSenderTests.cpp  DiagnosticsStreamReporterTests.cpp  DirectoryMonitorTests.cpp  DynamicLibraryTests.cpp  FileTest.cpp  NetworkConnectionTests.cpp  NetworkEndPointTests.cpp  StringFileTests.cpp  SubprocessTests.cpp  fileTests.cpp
